# loar

./: .dockerignore  .env.example  .firebaserc  .gitignore  .prettierignore  .railwayignore  AGENTS.md  CONTRIBUTING.md  HACKATHON.md  Makefile  README.md  SECURITY.md  WIKIA_FEATURE.md  bts.jsonc  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  firestore.indexes.json  firestore.rules  lint-staged.config.mjs  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  railway.toml  setup.sh  turbo.json  vercel.json  wagmi.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: anchor-tests.yml  bridge-reconcile.yml  ci.yml  cost-drift.yml  deploy.yml  (+3 more)
apps/contracts-sol/programs/credit-manager/: Cargo.toml
apps/contracts-sol/programs/credit-manager/src/: lib.rs
apps/contracts-sol/programs/loar-token/: Cargo.toml
apps/contracts-sol/programs/loar-token/src/: lib.rs
apps/contracts-sol/programs/nft-characters/: Cargo.toml
apps/contracts-sol/programs/nft-characters/src/: lib.rs
apps/contracts-sol/programs/nft-entities/: Cargo.toml
apps/contracts-sol/programs/nft-entities/src/: lib.rs
apps/contracts-sol/programs/nft-episodes/: Cargo.toml
apps/contracts-sol/programs/nft-episodes/src/: lib.rs
apps/contracts-sol/programs/payment-router/: Cargo.toml
apps/contracts-sol/programs/payment-router/src/: lib.rs
apps/contracts-sol/programs/universe-manager/: Cargo.toml
apps/contracts-sol/programs/universe-manager/src/: lib.rs
apps/programs/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
apps/programs/programs/bonding_curve/: Cargo.toml
apps/programs/programs/bonding_curve/src/: lib.rs
apps/programs/programs/canon_market/: Cargo.toml
apps/programs/programs/canon_market/src/: lib.rs
apps/programs/programs/collab_manager/: Cargo.toml
apps/programs/programs/collab_manager/src/: lib.rs
apps/programs/programs/credit_manager/: Cargo.toml
apps/programs/programs/credit_manager/src/: lib.rs
apps/programs/programs/episode/: Cargo.toml
apps/programs/programs/episode/src/: lib.rs
apps/programs/programs/fee_locker/: Cargo.toml
apps/programs/programs/fee_locker/src/: lib.rs
apps/programs/programs/licensing/: Cargo.toml
apps/programs/programs/licensing/src/: lib.rs
apps/programs/programs/payment/: Cargo.toml
apps/programs/programs/payment/src/: lib.rs
apps/programs/programs/premium_actions/: Cargo.toml
apps/programs/programs/premium_actions/src/: lib.rs
apps/programs/programs/remix_fees/: Cargo.toml
apps/programs/programs/remix_fees/src/: lib.rs
apps/programs/programs/rights/: Cargo.toml
apps/programs/programs/rights/src/: lib.rs
apps/programs/programs/split_router/: Cargo.toml
apps/programs/programs/split_router/src/: lib.rs
apps/programs/programs/staking/: Cargo.toml
apps/programs/programs/staking/src/: lib.rs
apps/programs/programs/subscription/: Cargo.toml
apps/programs/programs/subscription/src/: lib.rs
apps/programs/programs/universe/: Cargo.toml
apps/programs/programs/universe/src/: lib.rs
apps/programs/scripts/: backup-keypairs.sh  demo-mint.ts  init-canon-market.ts  init-collab-manager.ts  init-configs.ts  init-credit-manager.ts  init-fee-locker.ts  init-licensing.ts  init-payment.ts  init-premium-actions.ts  init-remix-fees.ts  init-rights.ts  init-split-router.ts  init-staking.ts  init-subscription.ts  mainnet-runbook-dryrun.ts  transfer-payment-ownership.ts  transfer-upgrade-authority.ts
apps/programs/tests/: README.md  bonding_curve.ts  canon_market.ts  collab_manager.ts  credit_manager.ts  episode.ts  fee_locker.ts  licensing.ts  payment.ts  premium_actions.ts  remix_fees.ts  rights.ts  smoke.test.ts  split_router.ts  staking.ts  subscription.ts  universe.ts
cyberwar-output/: voice-profiles.json
dataconnect/: dataconnect.yaml
deployments/: base-sepolia.json  base.json  sepolia.json
docs/: agents.md  ai-models.md  analytics-spec.md  analytics.md  api.md  architecture.md  audit-fix-tracker.md  bug-bounty.md  compliance-kyc-aml.md  compliance-tax-reporting.md  content-provenance.md  contracts.md  creator-journey.md  database.md  deployment.md  disaster-recovery.md  environment.md  external-audit-engagement.md  gas-abstraction.md  governance-transition.md  gtm-prd.md  incident-response.md  ip-policy.md  launch-readiness.md  mainnet-readiness-session-2026-05-16.md  mcp-hosted-sse-deploy.md  mcp-publish-runbook.md  mcp-week1-hardening-audit.md  mev-and-fee-hook.md  mobile-store-submission.md  monetization-map.md  mvp.md  ops-pricing-integrity.md  prd-ad-placements.md  prd-agents.md  prd-alpha-01-brand-unification.md  prd-alpha-02-revenue-loop.md  prd-bounties.md  prd-editor.md  prd-indexer-firestore-migration.md  (+35 more)
firstproof-output/: voice-profiles.json
monerochan-audio-output/: concat.txt
monerochan-audio-output-episode-1-animated/: concat.txt  concat_v2.txt
scripts/: attach-veo-scene1-to-wiki.ts  audit-alive-by-universe.ts  audit-content-coverage.ts  audit-empty-universes-detail.ts  audit-empty-universes.ts  audit-fogline-universes.ts  audit-universe-content.ts  audit-universe-episodes.ts  backfill-all-universe-nodes.ts  backfill-ephemeral-media.ts  backfill-episode-canon.ts  backfill-fogline-nodes.ts  backfill-hide-unnamed-universes.ts  backfill-hide-unreachable.ts  backfill-hide-wrong-mimetype.ts  backfill-hls.ts  backfill-video-thumbnails.ts  batch-regen-missing.ts  build-episode-from-nodes.ts  build-first-proof-episode.ts  check-addresses.ts  check-bucket.ts  check-bundle-size.mjs  check-cost-drift.ts  check-cyber-war.ts  check-deployer-balance.ts  check-failing-urls.ts  check-fogline-status.ts  check-monerochan-episodes.ts  check-offchain-rehost.ts  check-registry-staleness.ts  check-rehost-availability.ts  check-tx.ts  cleanup-dragon-egg.ts  consolidate-fogline.ts  create-cyber-war.ts  create-cyberwar-characters.ts  create-dostopian-universe.ts  create-dragon-egg-universe.ts  create-ecombonator-characters.ts  (+137 more)
spacefleet-output/: voice-profiles.json
(+1731 files in other folders)
