[package]
name = "credit-manager"
version = "0.1.0"
description = "AI generation credit purchases with dual pricing (SOL + $LOAR)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
