[package]
name = "nft-entities"
version = "0.1.0"
description = "Entity NFTs (places, events, vehicles, things, lore, species, tech, orgs)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_entities"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
