[package]
name = "nft-episodes"
version = "0.1.0"
description = "Episode NFTs + editions via Metaplex, with rights checks and payment routing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_episodes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
