[package]
name = "payment-router"
version = "0.1.0"
description = "Centralizes SOL/SPL payment routing with platform fee splits and creator claims"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
