[package]
name = "universe-manager"
version = "0.1.0"
description = "Universe creation, governance token deployment, and narrative node management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universe_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022", "associated_token"] }
