[package]
name = "credit_manager"
version = "0.1.0"
description = "LOAR CreditManager — Solana sister to apps/contracts/src/revenue/CreditManager.sol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
