[package]
name = "subscription"
version = "0.1.0"
description = "LOAR SubscriptionManager — Solana sister to apps/contracts/src/revenue/SubscriptionManager.sol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "universe/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# Depend on the universe crate so authority checks read `Universe.creator`
# live (same trust model as EVM's `IERC721(universeManager).ownerOf`).
universe = { path = "../universe", features = ["cpi"] }
