[package]
name = "universe"
version = "0.1.0"
description = "LOAR Universe program — Solana sister to apps/contracts/src/Universe.sol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
